--- a/MonoGame.Framework/MonoGame.Framework.DesktopGL.csproj
+++ b/MonoGame.Framework/MonoGame.Framework.DesktopGL.csproj
@@ -17,9 +17,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-    <PackageReference Include="MonoGame.Library.SDL" Version="2.26.5.5" />
-    <PackageReference Include="NVorbis" Version="0.10.4" />
-  </ItemGroup>
+    </ItemGroup>
 
     <ItemGroup>
         <Compile Remove="bin\**\*"/>
@@ -84,41 +82,6 @@
         <Compile Include="..\ThirdParty\StbImageSharp\src\**\*.cs" LinkBase="Utilities\StbImageSharp"/>
         <Compile Include="..\ThirdParty\StbImageWriteSharp\src\**\*.cs" LinkBase="Utilities\StbImageWriteSharp"/>
     </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Platform\TitleContainer.Desktop.cs" />
-    <Compile Include="Platform\Audio\OggStream.cs" />
-    <Compile Include="Platform\Audio\Xact\WaveBank.Default.cs" />
-    <Compile Include="Platform\Graphics\OpenGL.Common.cs" />
-    <Compile Include="Platform\Graphics\Texture2D.StbSharp.cs" />
-    <Compile Include="Platform\SDL\SDL2.cs" />
-    <Compile Include="Platform\SDL\SDLGamePlatform.cs" />
-    <Compile Include="Platform\SDL\SDLGameWindow.cs" />
-    <Compile Include="Platform\Utilities\AssemblyHelper.cs" />
-    <Compile Include="Platform\Utilities\CurrentPlatform.cs" />
-    <Compile Include="Platform\Utilities\FuncLoader.Desktop.cs" />
-    <Compile Include="Platform\Utilities\InteropHelpers.cs" />
-    <Compile Include="Platform\Utilities\ReflectionHelpers.Default.cs" />
-    <Compile Include="Platform\Media\MediaLibrary.Default.cs" />
-    <Compile Include="Platform\Media\MediaPlayer.Default.cs" />
-    <Compile Include="Platform\Media\Song.NVorbis.cs" />
-    <Compile Include="Platform\Input\GamePad.SDL.cs" />
-    <Compile Include="Platform\Input\InputKeyEventArgs.cs" />
-    <Compile Include="Platform\Input\Joystick.SDL.cs" />
-    <Compile Include="Platform\Input\Keyboard.SDL.cs" />
-    <Compile Include="Platform\Input\KeyboardUtil.SDL.cs" />
-    <Compile Include="Platform\Input\KeysHelper.cs" />
-    <Compile Include="Platform\Input\Mouse.SDL.cs" />
-    <Compile Include="Platform\Input\MouseCursor.SDL.cs" />
-    <Compile Include="Platform\Graphics\GraphicsContext.SDL.cs" />
-    <Compile Include="Platform\Graphics\OpenGL.SDL.cs" />
-    <Compile Include="Platform\Graphics\WindowInfo.SDL.cs" />
-    <Compile Include="Platform\Graphics\GraphicsAdapter.Legacy.cs" />
-    <Compile Include="Platform\GamePlatform.Desktop.cs" />
-    <Compile Include="Platform\GraphicsDeviceManager.SDL.cs" />
-
-    <Compile Include="..\ThirdParty\StbImageSharp\src\**\*.cs" LinkBase="Utilities\StbImageSharp" />
-    <Compile Include="..\ThirdParty\StbImageWriteSharp\src\**\*.cs" LinkBase="Utilities\StbImageWriteSharp" />
-  </ItemGroup>
 
     <ItemGroup>
         <EmbeddedResource Include="MonoGame.bmp">
@@ -136,19 +99,41 @@
             <PackagePath>runtimes\win-x86\native</PackagePath>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <Content  Include="..\ThirdParty\Dependencies\openal-soft\Windows\x64\soft_oal.dll">
+        <Content Include="..\ThirdParty\Dependencies\SDL\Windows\x86\SDL2.dll">
+            <Link>x86\SDL2.dll</Link>
+            <PackagePath>runtimes\win-x86\native</PackagePath>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+
+        <Content Include="..\ThirdParty\Dependencies\openal-soft\Windows\x64\soft_oal.dll">
             <Link>x64\soft_oal.dll</Link>
             <PackagePath>runtimes\win-x64\native</PackagePath>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <Content  Include="..\ThirdParty\Dependencies\openal-soft\Linux\x64\libopenal.so.1">
+        <Content Include="..\ThirdParty\Dependencies\SDL\Windows\x64\SDL2.dll">
+            <Link>x64\SDL2.dll</Link>
+            <PackagePath>runtimes\win-x64\native</PackagePath>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+
+        <Content Include="..\ThirdParty\Dependencies\openal-soft\Linux\x64\libopenal.so.1">
             <Link>x64\libopenal.so.1</Link>
             <PackagePath>runtimes\linux-x64\native</PackagePath>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <Content  Include="..\ThirdParty\Dependencies\openal-soft\MacOS\Universal\libopenal.1.dylib">
-            <Link>libopenal.1.dylib</Link>
+        <Content Include="..\ThirdParty\Dependencies\SDL\Linux\x64\libSDL2-2.0.so.0">
+            <Link>x64\libSDL2-2.0.so.0</Link>
+            <PackagePath>runtimes\linux-x64\native</PackagePath>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
 
+        <Content Include="..\ThirdParty\Dependencies\openal-soft\MacOS\Universal\libopenal.1.dylib">
+            <Link>libopenal.1.dylib</Link>
+            <PackagePath>runtimes\osx\native</PackagePath>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="..\ThirdParty\Dependencies\SDL\MacOS\Universal\libSDL2.dylib">
+            <Link>libSDL2.dylib</Link>
             <PackagePath>runtimes\osx\native</PackagePath>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
